force-app/main/default/objects/Field_History_Store__b/Field_History_Store__b.object-meta.xml
<CustomObject>
    <label>Field History Store</label>
    <pluralLabel>Field History Stores</pluralLabel>
</CustomObject>