force-app/main/default/objects/Field_History_Store__b/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>