force-app/main/default/objects/Field_History_Store__b/fields/Indexer__c.field-meta.xml
<CustomField>
    <fullName>Indexer__c</fullName>
    <label>Indexer</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>