force-app/main/default/objects/Field_History_Store__b/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <label>New Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>