force-app/main/default/objects/Field_History_Store__b/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>