force-app/main/default/objects/Field_History_Store__b/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <label>Old Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>