force-app/main/default/objects/Field_History_Store__b/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_History_Stores_User</relationshipName>
    <type>Lookup</type>
</CustomField>